# DogDogData

./: .coveragerc  .env.example  .gitattributes  .gitignore  .gitignore_GUIDE.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  Makefile  README.md  README_FOR_GITHUB.md  RELEASE_REPORT_v4.8.0.md  V2对话历史完成报告.md  V2开发进度.md  app.py  bug_tracker.json  charts.py  check_env.py  check_pet_implementation.py  config.py  config_demo.py  conftest.py  create_chat_tables.py  demo.db  docker-compose.monitoring.yml  errors.py  fix_color_import.py  generate_pet_sprites.py  init_db.py  map_utils.py  models.py  models_analytics.py  models_charts.py  models_dog_breeds.py  models_extended.py  models_store.py  (+35 more)
Test/: .coveragerc  AI_ASSISTANT_TEST_GUIDE.md  CHECKLIST.md  DEMO_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README_AI_TESTS.md  README_TEST_CONSOLE.md  TEST_CONSOLE_GUIDE.md  bug_tracker.py  check_test_quality.py  conftest_playwright.py  conftest_ui.py  coverage_analyzer.py  factories.py  init_test_db.py  playwright_config.py  qa_test.py  report_generator.py  requirements-test.txt  run_ai_full_tests.py  run_ai_tests.py  run_comprehensive_tests.py  run_full_tests.py  run_playwright.bat  run_playwright_tests.py  run_professional_tests.py  run_simple_tests.py  run_tests.bat  run_tests.py  run_tests_direct.py  run_tests_menu.bat  run_tests_simple.py  run_ui_tests.bat  start_test_console.bat  test_api.py  test_auth.py  test_auth_playwright.py  test_breed.py  test_charts.py  (+25 more)
api/: routes.py
data/: knowledge_base.json
docs/: AI_CHAT_BEFORE_AFTER_COMPARISON.md  AI_CHAT_OPTIMIZATION_SUMMARY.md  AI_CHAT_QUICK_TEST_GUIDE.md  AI_DELETE_FEATURE_COMPLETE.md  API 接口文档.md  AUTO_TEST_REPORT.md  DATABASE_MIGRATION_GUIDE.md  FRONTEND_DELETE_FEATURE.md  FULL_TEST_REPORT.md  PRODUCT_OVERVIEW.md  PROMOTION_MATERIAL.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  RELEASE_NOTES.md  TECHNICAL_ARCHITECTURE.md  业务流程文档.md  产品原型设计.md  产品需求文档.md  宠物功能开发总结.md  宠物功能技术文档.md  宠物小精灵可爱版改造总结.md  开发文档.md  开发文档_重构版.md  快速部署指南.md  数据分析系统-完整指南.md  数据新鲜度监控-快速开始.md  数据新鲜度监控-维护总结.md  文档清单.md  测试学习指南1-7天.md  测试学习指南_第 1 天.md  测试学习指南_第 3 天.md  测试学习指南_第 4 天.md  测试学习指南_第 5 天.md  部署指南.md  部署检查清单.md  项目文档编制总结.md  项目计划文档.md  验收标准文档.md
frontend/: index.html  (+3 more)
(+235 files in other folders)
