[project]
name = "dog-data-system"
version = "5.0.1"
description = "Flask-based dog data analysis & visualization platform"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "Flask>=3.1",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "Flask-Caching>=2.0",
    "Flask-APScheduler>=1.13",
    "Flask-Migrate>=4.0",
    "flask-babel>=4.0",
    "flask-cors>=6.0",
    "PyMySQL>=1.1",
    "SQLAlchemy>=2.0",
    "pyecharts>=2.0",
    "python-dotenv>=1.0",
    "PyJWT>=2.0",
    "APScheduler>=3.10",
    "Werkzeug>=3.0",
    "Jinja2>=3.1",
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "gunicorn>=21.0",
    "psycopg2-binary>=2.9",
    "beautifulsoup4>=4.12",
    "python-slugify>=8.0",
    "lxml>=5.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "pre-commit>=3.0",
    "bandit>=1.7",
]
test = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-playwright>=0.5",
    "pytest-html>=4.0",
    "pytest-dotenv>=0.5",
    "coverage>=7.0",
]
monitoring = [
    "prometheus_client>=0.20",
    "prometheus_flask_exporter>=0.23",
    "psutil>=7.0",
]
playwright = [
    "playwright>=1.42",
]
analytics = [
    "pandas>=2.0",
    "numpy>=2.0",
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
max-line-length = 120
max-complexity = 10
extend-ignore = "E203,E501,W503"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v --strict-markers"
testpaths = ["Test/"]
markers = [
    "slow: 标记慢速测试",
    "playwright: 标记 Playwright E2E 测试",
    "e2e: 标记端到端测试",
    "p0: P0 优先级 - 核心功能冒烟测试",
    "p1: P1 优先级 - 重要功能测试",
    "p2: P2 优先级 - 次要功能测试",
    "api: 标记 API 接口测试",
    "ui: 标记 UI 界面测试",
    "alpine: 标记 Alpine.js 组件测试",
    "accessibility: 标记无障碍访问测试",
    "performance: 标记性能测试",
    "integration: 标记集成测试",
    "monitoring: 标记监控相关测试",
    "charts: 标记图表相关测试",
]

[tool.coverage.run]
source = ["."]
omit = ["*/migrations/*", "*/tests/*", "*/Test/*", "*/node_modules/*"]
